--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,12 @@ pluginSinceBuild = 213
 pluginUntilBuild = 223.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
+platformType = IU
 platformVersion = 2021.3.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = JavaScriptLanguage,NodeJS
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.6
