--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,7 +9,8 @@
     <depends>NodeJS</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <runLineMarkerContributor language="JavaScript" implementationClass="com.github.gllxl.imagepreview.LineMarkerContributor"/>
+        <runLineMarkerContributor language="JavaScript" implementationClass="com.github.gllxl.imagepreview.JsLineMarkerContributor"/>
+        <runLineMarkerContributor language="CSS" implementationClass="com.github.gllxl.imagepreview.CssLineMarkerContributor"/>
     </extensions>
 
     <applicationListeners>
