--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,7 +19,11 @@
 
     <description>
         <![CDATA[
-            A preview image url plugin, when you define an image url, you can preview it content and size in IDE, now support JS/TS/CSS Files
+            A preview image url plugin, when you define an image url, you can preview it content and size in IDE
+
+            <li> JS/TS/CSS files is supported;
+            <li> Image url is supported; (local paths are not supported)
+
         ]]>
     </description>
 </idea-plugin>
