--- a/gradle.properties
+++ b/gradle.properties
@@ -7,16 +7,16 @@ pluginRepositoryUrl = https://github.com/gllxl/image-preview
 pluginVersion = 0.1.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 213
-pluginUntilBuild = 223.*
+pluginSinceBuild = 223.0
+pluginUntilBuild = 231.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IU
-platformVersion = 2021.3.3
+platformVersion = 2023.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = JavaScriptLanguage,NodeJS,CSS
+platformPlugins = JavaScript,NodeJS
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.6
