--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,6 +11,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <runLineMarkerContributor language="JavaScript" implementationClass="com.github.gllxl.imagepreview.JsLineMarkerContributor"/>
         <runLineMarkerContributor language="CSS" implementationClass="com.github.gllxl.imagepreview.CssLineMarkerContributor"/>
+        <editor.linePainter implementation="com.github.gllxl.imagepreview.LinePainter"/>
     </extensions>
 
     <applicationListeners>
